Fixes a menu float issue on mobile.

--- a/webapp/client/css/main.scss
+++ b/webapp/client/css/main.scss
@@ -30,7 +30,6 @@ body {
   }
 
   div.menu {
-    //border: 2px solid red;
     font-family: $serif;
     font-size: 16px;
     top: 23px;
@@ -40,7 +39,8 @@ body {
     color: black;
     text-align: right;
     margin: 0px 0px 0px auto;
-    width: 200px;
+    width: auto;
+    height: 30px;
 
     img.photo {
       height: 25px;
